Cria página de cadastro de corretor

--- a/cadastro-corretor.html
+++ b/cadastro-corretor.html
@@ -2,9 +2,9 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>AlugAqui</title>
+    <title>Cadastro Usuário</title>
 </head>
 <body>
-    <a href="cadastro-corretor.html">Cadastrar corretor</a>
+    <p>Página de cadastro de corretor</p>
 </body>
 </html>
