Cria formulário de cadastro de corretor

--- a/cadastro-corretor.html
+++ b/cadastro-corretor.html
@@ -5,6 +5,19 @@
     <title>Cadastro Usuário</title>
 </head>
 <body>
-    <p>Página de cadastro de corretor</p>
+    <form>
+        <label for="email">Email:</label><br>
+        <input type="text" name="email" id="email"><br>
+        <label for="nome">Nome:</label><br>
+        <input type="text" name="nome" id="nome"><br>
+        <label for="sobrenome">Sobrenome:</label><br>
+        <input type="text" name="sobrenome" id="sobrenome"><br>
+        <label for="celular">Celular:</label><br>
+        <input type="text" name="celular" id="celular"><br>
+        <label for="creci">CRECI:</label><br>
+        <input type="text" name="creci" id="creci"><br>
+        <br>
+        <input type="submit" value="Cadastrar">
+    </form>
 </body>
 </html>
