--- a/cadastro-corretor.html
+++ b/cadastro-corretor.html
@@ -10,7 +10,9 @@
 <body>
     <form id="formCorretor">
         <label for="email">Email:</label><br>
-        <input type="text" name="email" id="email" required><br>
+        <input type="email" name="email" id="email" required><br>
+        <label for="senha">Senha:</label><br>
+        <input type="password" name="senha" id="senha" required><br>
         <label for="nome">Nome:</label><br>
         <input type="text" name="nome" id="nome"><br>
         <label for="sobrenome">Sobrenome:</label><br>
