Implementa busca de imoveis

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>AlugAqui</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-    <a href="cadastro-corretor.html">Cadastrar corretor</a>
+    <a href="cadastro-corretor.html">Cadastrar corretor</a><br>
+    <br>
+    <label for="busca-imoveis">Buscar imóveis:</label><br>
+    <input type="search" name="busca-imoveis" id="busca-imoveis"/>
+    <button id="btn-busca-imoveis">Buscar</button>
+
+    <ul id="resultado-busca">
+
+    </ul>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
