Implementa página de cadastro de cliente
Cria e implementa o formulário para cadastro de cliente

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="cadastro-corretor.html">Cadastrar corretor</a><br>
+    <a href="cadastro-cliente.html">Cadastrar cliente</a><br>
     <br>
     <label for="busca-imoveis">Buscar imóveis:</label><br>
     <input type="search" name="busca-imoveis" id="busca-imoveis"/>
