--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -19,7 +19,7 @@
         <input type="text" name="sobrenome" id="sobrenome"><br>
         <label for="celular">Celular:</label><br>
         <input type="text" name="celular" id="celular"><br>
-        <label for="creci">CPF:</label><br>
+        <label for="cpf">CPF:</label><br>
         <input type="text" name="cpf" id="cpf"><br>
         <br>
         <input type="submit" id="submitCliente" value="Cadastrar">
