Cria entradas de login

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+    <div id="div-login">
+        <label for="email-login">Email:</label>
+        <input type="email" id="email-login"/>
+        <label for="pass-login">Senha:</label>
+        <input type="password" id="pass-login"/>
+        <button id="btn-login">Entrar</button>
+        <br>
+    </div>
+
+    <br>
+
     <a href="cadastro-corretor.html">Cadastrar corretor</a><br>
     <a href="cadastro-cliente.html">Cadastrar cliente</a><br>
+
     <br>
+
     <label for="busca-imoveis">Buscar imóveis:</label><br>
     <input type="search" name="busca-imoveis" id="busca-imoveis"/>
     <button id="btn-busca-imoveis">Buscar</button>
