--- a/cadastro-corretor.html
+++ b/cadastro-corretor.html
@@ -9,20 +9,33 @@
 </head>
 <body>
     <form id="formCorretor">
-        <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email" required><br>
-        <label for="senha">Senha:</label><br>
-        <input type="password" name="senha" id="senha" required><br>
-        <label for="nome">Nome:</label><br>
-        <input type="text" name="nome" id="nome"><br>
-        <label for="sobrenome">Sobrenome:</label><br>
-        <input type="text" name="sobrenome" id="sobrenome"><br>
-        <label for="celular">Celular:</label><br>
-        <input type="text" name="celular" id="celular"><br>
-        <label for="creci">CRECI:</label><br>
-        <input type="text" name="creci" id="creci"><br>
-        <br>
-        <input type="submit" id="submitCorretor" value="Cadastrar">
+        <div>
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" id="email" required>
+        </div>
+        <div>
+            <label for="senha">Senha:</label><br>
+            <input type="password" name="senha" id="senha" required>
+        </div>
+        <div>
+            <label for="nome">Nome:</label><br>
+            <input type="text" name="nome" id="nome">
+        </div>
+        <div>
+            <label for="sobrenome">Sobrenome:</label><br>
+            <input type="text" name="sobrenome" id="sobrenome">
+        </div>
+        <div>
+            <label for="celular">Celular:</label><br>
+            <input type="text" name="celular" id="celular">
+        </div>
+        <div>
+            <label for="creci">CRECI:</label><br>
+            <input type="text" name="creci" id="creci">
+        </div>
+        <div>
+            <input type="submit" id="submitCorretor" value="Cadastrar">
+        </div>
     </form>
 </body>
 </html>
