--- a/cadastro-corretor.html
+++ b/cadastro-corretor.html
@@ -2,27 +2,45 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Cadastro Usuário</title>
 
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <form id="formCorretor">
-        <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email" required><br>
-        <label for="senha">Senha:</label><br>
-        <input type="password" name="senha" id="senha" required><br>
-        <label for="nome">Nome:</label><br>
-        <input type="text" name="nome" id="nome"><br>
-        <label for="sobrenome">Sobrenome:</label><br>
-        <input type="text" name="sobrenome" id="sobrenome"><br>
-        <label for="celular">Celular:</label><br>
-        <input type="text" name="celular" id="celular"><br>
-        <label for="creci">CRECI:</label><br>
-        <input type="text" name="creci" id="creci"><br>
-        <br>
-        <input type="submit" id="submitCorretor" value="Cadastrar">
-    </form>
+    <div class="container">
+        <form id="formCorretor" class="col-lg-4">
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" name="email" id="email" required>
+            </div>
+            <div class="form-group">
+                <label for="senha">Senha:</label>
+                <input type="password" class="form-control" name="senha" id="senha" required>
+            </div>
+            <div class="form-group">
+                <label for="nome">Nome:</label>
+                <input type="text" class="form-control" name="nome" id="nome">
+            </div>
+            <div class="form-group">
+                <label for="sobrenome">Sobrenome:</label>
+                <input type="text" class="form-control" name="sobrenome" id="sobrenome">
+            </div>
+            <div class="form-group">
+                <label for="celular">Celular:</label>
+                <input type="text" class="form-control" name="celular" id="celular">
+            </div>
+            <div class="form-group">
+                <label for="creci">CRECI:</label>
+                <input type="text" class="form-control" name="creci" id="creci">
+            </div>
+
+            <button type="submit" class="btn btn-primary" id="submitCorretor">Cadastrar</button>
+        </form>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
